# ROS3_BURGER_NOETIC

catkin_ws/: .bash_history  .bashrc  .gitconfig  commands.txt  map (copy).pgm  map (copy).yaml  map.pgm
catkin_ws/build_isolated/: catkin_make_isolated.cache
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/install_isolated/: local_setup.sh  setup.sh
follow_waypoints/saved_path/: pose.csv
include/actionlib_tutorials/: AveragingAction.h  AveragingActionFeedback.h  AveragingActionGoal.h  AveragingActionResult.h  AveragingFeedback.h  AveragingGoal.h  AveragingResult.h  FibonacciAction.h  FibonacciActionFeedback.h  FibonacciActionGoal.h  FibonacciActionResult.h  FibonacciFeedback.h  FibonacciGoal.h  FibonacciResult.h
include/amcl/: AMCLConfig.h
include/bond/: Constants.h  Status.h
include/compressed_depth_image_transport/: CompressedDepthPublisherConfig.h
include/compressed_image_transport/: CompressedPublisherConfig.h  CompressedSubscriberConfig.h
include/control_toolbox/: ParametersConfig.h
include/controller_manager_msgs/: SwitchControllerRequest.h  SwitchControllerResponse.h
include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
include/dynamic_reconfigure/: BoolParameter.h  Config.h  ConfigDescription.h  DoubleParameter.h  Group.h  GroupState.h  IntParameter.h  ParamDescription.h  Reconfigure.h  ReconfigureRequest.h  (+4 more)
lib/: libstage.so.4.3.0
share/rqt_human_radar/: package.xml  plugin.xml
share/rqt_human_radar/cmake/: rqt_human_radarConfig.cmake
(+1845 files in other folders)
