<?xml version="1.0"?>
<package format="2">
  <name>rqt_human_radar</name>
  <version>0.2.1</version>
  <description>A radar-like visualization for humans in the scene, representing their position, orientation, engagement level</description>

  <author email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</author>
  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>hri</depend>
  <depend>tf</depend>
  <depend>libqt5-svg-dev</depend>
  <depend>qtbase5-dev</depend>
  
  <build_depend>roscpp</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
